[tool.poetry]
name = "inlyittask"
version = "0.1.0"
description = ""
authors = ["Pechenuxa1 <v.tatarintsev@g.nsu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
